# fourier

./: README.md  pyproject.toml
data/: .gitignore
src/: main.py
